fix(intervention-demo): show ACP buttons, fix list alignment, add wizard form
- Set docked={true} on AcpPermissionCard to show action buttons
- Fix listRadio vertical alignment with flex layout
- Add wizard form demo with 3 steps
- Remove unused Text import

--- a/src/components/business-component/AgentIntervention/components/McpAskQuestionCard/McpAskFormField.less
+++ b/src/components/business-component/AgentIntervention/components/McpAskQuestionCard/McpAskFormField.less
@@ -60,6 +60,15 @@
 }
 
 .listRadio {
-  display: block !important;
+  display: flex !important;
+  align-items: center;
   width: 100%;
+  min-height: 32px;
+
+  :global {
+    .ant-radio {
+      display: flex;
+      align-items: center;
+    }
+  }
 }
